# pysleep

./: LICENSE  README.md  pyproject.toml
.github/workflows/: cr.yml  release.yml
src/pysleep/: __init__.py  hypnogram_report.py  label.py  stat.py  stat_test.py
